--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,354 @@
 @charset "utf-8";
+
+.wrapper {
+  padding: 32px 0;
+  background-color: #f2f6f7;
+}
+
+.inner {
+  width: 640px;
+  margin: 0 auto;
+}
+
+/* 共通 */
+.button {
+  box-sizing: border-box;
+  display: inline-block;
+  text-align: center;
+  transition: 0.3s;
+  padding: 13px;
+  font-size: 13px;
+  font-weight: 500;
+  cursor: pointer;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+}
+
+.is-width-half {
+  width: 50%;
+}
+
+.is-defaultText {
+  color: #949697;
+  font-size: 12px;
+}
+
+.is-text-center {
+  text-align: center;
+}
+
+.is-margin-top {
+  margin-top: 5px;
+}
+
+.input-area {
+  box-sizing: border-box;
+  height: 36px;
+  width: 100%;
+  padding: 5px;
+  color: #545658;
+  font-size: 13px;
+  line-height: 2;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+  outline:none
+}
+
+.input-area:focus {
+  background-color: #fff;
+  border-color: rgba(59, 133, 133, .4);
+  box-shadow: 0 0 0 2px rgba(1, 191, 189, .1);
+}
+
+.label-text {
+  font-size: 12px;
+  color: #545658;
+}
+
+.alert {
+  color: #dd4b39;
+}
+
+.row {
+  margin-top: 20px;
+}
+
+.input-init {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  resize: none;
+}
+
+
+/* メイン */
+.main {
+  background-color: #fff;
+  padding: 48px 64px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: 0 0 4px 0 rgb(0 0 0 / 18%);
+}
+
+.title {
+  text-align: center;
+  font-size: 24px;
+  color: #545658;
+}
+
+.columns {
+  display: flex;
+  text-align: center;
+  margin-top: 24px;
+}
+
+.sns:last-child {
+  margin-left: 8px;
+}
+
+.facebook {
+  color: #fff;
+}
+
+.facebook-link {
+  padding: 13px;
+  background-color: #3b5999;
+  border-color: #3b5999;
+}
+
+.facebook-link:hover {
+  background-color: #2f477a;
+}
+
+.google {
+  color: #dd4b39;
+}
+
+.google-link {
+  padding: 13px;
+  background-color: #fff;
+}
+
+.google-link:hover {
+  background-color: #f2f6f7;
+}
+
+.supplement-text {
+  text-align: center;
+  margin-top: 8px;
+}
+
+/* アカウント情報 */
+.devider {
+  position: relative;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.devider p {
+  display: inline-block;
+  position: relative;
+  padding: 0 10px;
+  background-color: #fff;
+}
+
+.devider:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 1px;
+  width: 100%;
+  background-color: #ececec;
+}
+
+/* 名前 */
+.name-form {
+  display: flex;
+}
+
+.last-name_box {
+  margin-left: 16px;
+}
+
+/* 性別 */
+.gender-contents {
+  display: flex;
+  color: #545658;
+  font-size: 16px;
+}
+
+.gender-content {
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+.gender-content:first-child {
+  margin-left: 0;
+}
+
+.gender-content span {
+  position: relative;
+  display: inline-block;
+  padding: 3px 3px 3px 20px;
+}
+
+.gender-content .gender-type::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 14px;
+  width: 14px;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 50%;
+}
+
+.gender-input:checked + .gender-type::after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  height: 8px;
+  width: 8px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background-color: #01bfbd;
+}
+
+.gender-input {
+  display: none;
+}
+
+/* 出身 */
+.birthplace-area {
+  position: relative;
+}
+
+.birthplace-area::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+  top: 45%;
+  transform: rotate(45deg);
+  height: 5px;
+  width: 5px;
+  border-right: 2px solid #d9d9d9;
+  border-bottom: 2px solid #d9d9d9;
+}
+
+.select-input:focus {
+  background-color: #fbfbfb;
+  border-color: #d9d9d9;
+  box-shadow: initial;
+}
+
+/* 希望コース */
+.course-option {
+  margin-top: 10px;
+  color: #545658;
+  font-size: 16px;
+}
+
+.course-option:first-of-type {
+  margin-top: 5px;
+}
+
+.course-input {
+  display: none;
+}
+
+.course-option-text {
+  position: relative;
+  padding-left: 25px;
+}
+
+.course-option-text::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 15px;
+  width: 15px;
+  margin-top: -8px;
+  border: 1px solid #d9d9d9;
+}
+
+.course-input:checked + .course-option-text::after {
+  content: "";
+  position: absolute;
+  left: 6px;
+  top: 50%;
+  transform: rotate(45deg);
+  height: 16px;
+  width: 8px;
+  margin-top: -12px;
+  border-right: 3px solid #01bfbd;
+  border-bottom: 3px solid #01bfbd;
+}
+
+/* 備考 */
+.input-note {
+  height: 100px;
+}
+
+/* 作成ボタン */
+.submit_button {
+  width: 100%;
+  padding: 13px;
+  background-color: #01bfbd;
+  color: #fff;
+  border: none;
+}
+
+.submit_button:hover {
+  background-color: #00a8a5;
+}
+
+.submit_button:active {
+  background-color: #fff;
+  color: #01a6a4;
+  border: 1px solid #d9d9d9;
+}
+
+.agreement {
+  font-size: 12px;
+  line-height: 16px;
+  margin-top: 20px;
+}
+
+.link-color {
+  color: #01a6a4;
+}
+
+.link-color:hover {
+  color: #01bfbd;
+}
+
+/* フッター */
+.footer {
+  text-align: center;
+  margin-top: 32px;
+}
+
+.footer-margin {
+  display: inline-block;
+  margin: 8px 0;
+}
+
+.footer_text {
+  line-height: 16px;
+  font-size: 12px;
+}
+
+.footer a:hover {
+  box-sizing: border-box;
+  border-bottom: 1px solid #ececec;
+  border-bottom-color: #01bfbd;
+}
